# gpt2.cu

./: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  LICENSE  MLP.md  README.md  a.ipynb  flake.nix  grid_boxes22.html  pyproject.toml  taskfile.yml
benchmark/: mk_bench.py  run_nsys.py  timing.py
include/gpt2/: config.h  gpt2.h  mk.cuh  mk.h  model.cuh  split.cuh  tensor.cuh  tensor.h  train.cuh  train.h  utils.cuh
include/gpt2/device/: adamw.cuh  attention.cuh  cross_entropy.cuh  embedding.cuh  gelu.cuh  layernorm.cuh  mlp.cuh  residual.cuh  softmax.cuh
include/gpt2/global/: adamw.cuh  attention.cuh  cross_entropy.cuh  embedding.cuh  gelu.cuh  layernorm.cuh  mlp.cuh  residual.cuh  softmax.cuh
include/gpt2/layers/: adamw.h  attention.h  cross_entropy.h  embedding.h  gelu.h  layernorm.h  mlp.h  residual.h  softmax.h
nix/: packages.nix  weights.nix
programs/: CMakeLists.txt  benchmark.c  inference.c  inference.cu  mk.cu  prop.cu  train.c  train.cu
scripts/: a.cu  a.ipynb  dl.sh  dl_debug_state_and_data.sh  generate_clangd.py  hf_bench.py  hf_inference.py  hf_load_model.py  hf_state_gen.py  hf_to_bin.py  llm.py  mk_bench.py  plot_timer.py  plot_timer_alt.py  separate_kernels.ipynb  timer_parse.ipynb
src/: CMakeLists.txt  gpt2.c  gpt2.cu  mk.cu  tensor.c  tensor.cu  train.cu  utils.cu
src/kernels/: attention_kernels.cu  elementwise_kernels.cu  mlp_kernels.cu  reduction_kernels.cu
src/layers/: adamw.cu  attention.cu  cross_entropy.cu  embedding.cu  gelu.cu  layernorm.cu  mlp.cu  residual.cu  softmax.cu
tests/: CMakeLists.txt  bench_mlp.cu  test_forward.cu  test_mk.cu  test_mlp.cu  test_split.cu  test_train.cu  test_train_loop.cu  test_train_mk.cu
