[project]
name = "gpt2-cu"
version = "0.1.0"
requires-python = ">=3.12.0"
readme = "README.md"
authors = [
    { name = "Sreeram Vennam", email = "vennam404@gmail.com" },
    { name = "Bhargav Srinivas", email = "techwithbhargav@gmail.com" },
    { name = "Marco Christiani", email = "mchristiani2017@gmail.com" }
]
dependencies = [
    "numpy>=2.0.2",
    "torch>=2.5.1",
    "transformers>=4.48.3",
]
