[project]
name = "gpt2-cu"
version = "0.1.0"
requires-python = ">=3.12.0"
readme = "README.md"
authors = [
    { name = "Sreeram Vennam", email = "vennam404@gmail.com" },
    { name = "Bhargav Srinivas", email = "techwithbhargav@gmail.com" },
    { name = "Marco Christiani", email = "mchristiani2017@gmail.com" }
]
dependencies = [
    "numpy>=2.0.2",
    "torch>=2.5.1",
    "transformers>=4.48.3",
]

[dependency-groups]
benchmark = [
    "pint>=0.25.2",
]
dev = [
    "mypy>=1.19.0",
    "pyright>=1.1.407",
    "ruff>=0.14.8",
]
