[project]
name = "gpt2-cu"
version = "0.1.0"
requires-python = ">=3.12.0"
readme = "README.md"
authors = [
    { name = "Sreeram Vennam", email = "vennam404@gmail.com" },
    { name = "Bhargav Srinivas", email = "techwithbhargav@gmail.com" },
    { name = "Marco Christiani", email = "mchristiani2017@gmail.com" }
]
dependencies = [
    "numpy>=2.0.2",
    "torch>=2.5.1",
    "transformers>=4.48.3",
]

[dependency-groups]
benchmark = [
    "pint>=0.25.2",
    "pygit2>=1.19.0",
    "plotly>=6.5.0",
    "altair>=6.0.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
]
dev = [
    "ipython>=9.8.0",
    "mypy>=1.19.0",
    "pyright>=1.1.407",
    "ruff>=0.14.8",
]
